syntax = "proto3";

package Shared.gRpc.Dummy;

message DummyMessage {}

service DummyService {}