syntax = "proto3";

package Shared.gRpc.Greet;

//https://protobuf.dev/programming-guides/proto3/
message Greeting {
	int32 index=1;
	string first_name=2;
	string last_name=3;
}

message GreetingRequest{
	Greeting greeting=1;
}

message GreetingResponse{
	string result=1;
}

service GreetingService{

	//unary
	rpc Greet (GreetingRequest) returns (GreetingResponse){}

	//server streaming
	rpc GreetOneRequestMultiResponse (GreetingRequest) returns (stream GreetingResponse){}

	//client streaming
	rpc GreetMultiRequestOneResponse (stream GreetingRequest) returns (GreetingResponse){}

	//bidirectional streaming
	rpc GreetMultiRequestMultiResponse (stream GreetingRequest) returns (stream GreetingResponse){}
}